build_clean.log
⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of C:\Users\umasa\package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * C:\Users\umasa\Downloads\samagra\pnpm-lock.yaml

▲ Next.js 16.1.6 (Turbopack)

  Creating an optimized production build ...
Error: Cannot apply unknown utility class `border-border`
    [at onInvalidCandidate (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:21:1511)]
    [at Ee (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:16:37066)]
    [at C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:21:355]
    [at Pr (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:3:1733)]
    [at _ (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:3:1377)]
    [at Te (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:21:172)]
    [at pn (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:38:294)]
    [at async dn (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\tailwindcss@4.2.0\node_modules\tailwindcss\dist\lib.js:38:631)]
    [at async Xr (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\@tailwindcss+node@4.2.0\node_modules\@tailwindcss\node\dist\index.js:10:3417)]
    [at async N (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\@tailwindcss+postcss@4.2.0\node_modules\@tailwindcss\postcss\dist\index.js:10:3979)]

> Build error occurred
Error: Turbopack build failed with 2 errors:
./Downloads/samagra/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: C:\Users\umasa\Downloads\samagra\app\globals.css:1:1: Cannot apply unknown utility class `border-border`
    at Input.error (Downloads/samagra/node_modules/.pnpm/postcss@8.5.6/node_modules/postcss/lib/input.js:135:16) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\9706a__pnpm_f8c474d0._.js:4651:22]
    at Root.error (Downloads/samagra/node_modules/.pnpm/postcss@8.5.6/node_modules/postcss/lib/node.js:146:32) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\9706a__pnpm_f8c474d0._.js:928:38]
    [at Object.Once (C:\Users\umasa\Downloads\samagra\node_modules\.pnpm\@tailwindcss+postcss@4.2.0\node_modules\@tailwindcss\postcss\dist\index.js:10:6913)]
    at async LazyResult.runAsync (Downloads/samagra/node_modules/.pnpm/postcss@8.5.6/node_modules/postcss/lib/lazy-result.js:293:11) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\9706a__pnpm_f8c474d0._.js:6206:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\[root-of-the-server]__e9efd8c5._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\[root-of-the-server]__0d199528._.js:443:31]

Import trace:
  Client Component Browser:
    ./Downloads/samagra/app/globals.css [Client Component Browser]
    ./Downloads/samagra/app/layout.tsx [Server Component]


./Downloads/samagra/app/page.tsx:11:17
Ecmascript file had an error
   9 | import { Footer } from '@/components/footer';
  10 |
> 11 | const AIScene = dynamic(
     |                 ^^^^^^^^
> 12 |   () => import('@/components/ai-scene').then(mod => ({ default: mod.AIScene })),
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 13 |   { ssr: false, loading: () => <div className="w-full h-screen bg-background" /> }
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 14 | );
     | ^^
  15 |
  16 | export default function Home() {
  17 |   return (

`ssr: false` is not allowed with `next/dynamic` in Server Components. Please move it into a Client Component.


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\[root-of-the-server]__e9efd8c5._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\Users\umasa\Downloads\samagra\.next\build\chunks\[root-of-the-server]__0d199528._.js:443:31])
    at <unknown> (./Downloads/samagra/app/page.tsx:11:17)
